# x_backend

./: .flake8  .gitignore  Procfile  README.md  env.dev  env.example  manage.py  pyproject.toml
.github/workflows/: build.yml  heroku-deploy.yml
follows/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
follows/migrations/: 0001_initial.py  0002_rename_following_follow_followed_and_more.py
follows/models/: __init__.py  follows.py  models.py
follows/serializers/: __init__.py  follows_serializer.py  serializers.py
follows/tests/: test_follows.py  test_follows_viewset.py
follows/viewsets/: __init__.py  follows_viewset.py  viewsets.py
posts/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_remove_post_image_alter_post_content_comment.py  0003_alter_comment_options_comment_updated_at.py
posts/models/: __init__.py  models.py  posts.py
posts/serializers/: __init__.py  posts_serializer.py  serializers.py
posts/tests/: test_posts.py  test_posts_viewset.py
posts/viewsets/: __init__.py  posts.py  posts_viewset.py  viewsets.py
profile_images/: rafael_correa_cabeludo.jfif
users/: admin.py  factories.py  middleware.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_bio.py  0002_users_profile_image.py  0003_alter_user_options_alter_user_email.py
users/models/: __init__.py  models.py  users.py
users/serializers/: __init__.py  serializers.py  users_serializer.py
users/tests/: test_users.py  test_users_viewset.py
users/viewsets/: __init__.py  follow.py  users_viewset.py  viewsets.py
x_backend/: asgi.py  settings.py  urls.py  wsgi.py
x_backend_api/: asgi.py  settings.py  urls.py  wsgi.py
x_backend_api/users/: middleware.py
