[tool.poetry]
name = "x-backend"
version = "0.1.0"
description = "X Clone API"
authors = ["Rafael Corrêa <rafaelscdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.2"
django-cors-headers = "^3.13.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"