[tool.poetry]
name = "x-backend"
version = "0.1.0"
description = "X Clone API"
authors = ["Rafael Corrêa <rafaelscdev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "x_backend" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = "^4.2.10"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
Pillow = "^11.2.1"
django-extensions = "^3.2.3"
whitenoise = "^6.6.0"
drf-nested-routers = "^0.93.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"